force-app/main/default/objects/Account__c/Account__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Account</label>
</CustomObject>