force-app/main/default/objects/Account__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Object</label>
    <length>18</length>
    <type>Text</type>
</CustomField>