force-app/main/default/objects/Account__c/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Picklist Values</label>
    <type>TextArea</type>
</CustomField>