force-app/main/default/objects/Account__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Record Type</label>
    <length>18</length>
    <type>Text</type>
</CustomField>